# multiplayer-client

./: .env  .gitignore  Cargo.toml  jest.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/: globals.css  login.tsx  page.tsx
app/(protected)/: layout.tsx
app/(protected)/documents/: page.tsx
app/documents/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
components/: index.ts
components/document/: add-contributor.component.tsx  create-document.component.tsx  delete-document.component.tsx  document-list.component.tsx  editor.component.tsx  index.ts
components/document/add-contributor-menu/: add-contributor-menu.component.tsx  add-contributor-submit.component.tsx  add-contributor.context.tsx  index.ts  selected-users.component.tsx  user-search-list.component.tsx
components/forms/: create-document-form.component.tsx  index.ts  login-form.component.tsx  signup-form.component.tsx
components/search/: index.ts  search-bar.component.tsx  search.context.tsx
components/ui/: button.component.tsx  dialog-button.component.tsx  dialog.component.tsx  index.ts  input.component.tsx
editor/: Cargo.toml  wasm-bind.sh
editor/src/: configuration.rs  main.rs
editor/src/domain/: password.rs
editor/src/view/: login.rs
hooks/: index.ts  use-document-list.hook.ts  use-editor.hook.ts  use-login.hook.ts  use-signup.hook.ts
lib/: index.ts
lib/auth/: access-token.ts  get-access-token.ts  get-token-or-redirect.ts  index.ts  set-access-token.ts
lib/auth/browser/: get-access-token.ts  set-access-token.ts
lib/auth/server/: get-access-token.ts  get-server-session.ts
lib/config/: index.ts  public-config.constant.ts  require-environment-variable.ts
lib/server/: client.ts  resource.ts  server.ts  store.ts
lib/server-client/: client.ts  error.ts  index.ts  interceptor.ts  resource.ts  server.ts
lib/server-client/resources/: document.ts  user.ts
lib/server-client/types/: access-token.ts  base.ts  document.ts  error-response.ts  index.ts  user.ts
lib/server/resources/: base.ts  index.ts  user.test.ts
lib/server/types/: base.ts  credentials.ts  index.ts  user.ts
lib/sync/: README.md  awareness.js  index.js  message.js  monaco.js  protocol.js  websocket.js
native/: Cargo.toml  multiplayer-client.js
native/configuration/: local.yml
native/src/: lib.rs  main.rs  message.rs  websocket.rs
native/src/domain/: mod.rs
native/src/view/: editor.rs
public/: init-editor.js
scripts/: wasm-bind.sh
src/: auth.rs  configuration.rs  document.rs  echo.rs  http.rs  lib.rs  main.rs  message.rs  websocket.rs  websocket_chat.rs
src/domain/: email.rs
src/view/: chat.rs  editor.rs  login.rs  mod.rs  signup.rs
wasm/: Cargo.toml  package.json
wasm/app/: globals.css
wasm/public/: index.html  multiplayer-client.js
wasm/scripts/: wasm-bind.sh
wasm/src/: http.rs  main.rs  message.rs
wasm/src/view/: editor.rs  mod.rs
(+3 files in other folders)
