[package]
name = "multiplayer-client"
version = "0.1.0"
authors = ["Rick de Boer <rick.deboer@live.nl>"]
edition = "2021"
publish = false

[dependencies]
async-tungstenite = { version = "0.25", features = ["tokio-rustls-webpki-roots"] }
config = "0.11"
iced = { version = "0.12", features = ["debug", "wgpu", "webgl", "tokio"] }
once_cell = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["time"] }
wgpu = "0.19"
winit = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }
