[package]
name = "multiplayer-client"
version = "0.1.0"
authors = ["Rick de Boer <rick.deboer@live.nl>"]
edition = "2021"
publish = false

[dependencies]
async-tungstenite = { version = "0.25", features = ["tokio-rustls-webpki-roots"] }
config = "0.11"
iced = { version = "0.12", features = ["debug", "wgpu", "webgl", "tokio"] }
once_cell = "1.19"
rand = "0.8"
base64 = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["time"] }
tracing = "0.1.40"
url = "2.5"
validator = "0.17"
wgpu = "0.19"
winit = "0.29"
yrs = "0.18.2"
tracing-log = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
