[package]
name = "editor"
version = "0.1.0"
authors = ["Rick de Boer <rick.deboer@live.nl>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.12", features = ["debug", "wgpu", "webgl", "tokio"] }
rand = "0.8"
base64 = "0.12"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["time"] }
url = "2.5"
validator = "0.17"
wgpu = "0.19"
winit = "0.29"
ws_stream_wasm = "0.7"
yrs = "0.18.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
